--- a/src/services/emailTemplates/forgotPassword.ejs
+++ b/src/services/emailTemplates/forgotPassword.ejs
@@ -15,7 +15,7 @@
   <body>
     <div class="container">
       <h1>Password Reset</h1>
-      <p>Hi <%= firstName %>,</p>
+      <p>Hi <%= firstName %> <%= lastName %>,</p>
       
       <div class="reset-box">
         <p><strong>Click below to reset your password:</strong></p>
