--- a/src/services/emailTemplates/registration.ejs
+++ b/src/services/emailTemplates/registration.ejs
@@ -13,7 +13,7 @@
   </head>
   <body>
     <div class="container">
-      <h1>Welcome, <%= firstName %>!</h1>
+      <h1>Welcome, <%= firstName %> <%= lastName %>!</h1>
       <div class="welcome">
         <p><strong>You're successfully registered at RestBoo!</strong></p>
         <p>Email: <%= email %></p>
