password reset logic was updated

--- a/src/services/emailTemplates/forgotPassword.ejs
+++ b/src/services/emailTemplates/forgotPassword.ejs
@@ -19,8 +19,7 @@
       
       <div class="reset-box">
         <p><strong>Click below to reset your password:</strong></p>
-        <a href="<%= link %>" class="reset-button">Reset Password</a>
-        <p style="font-size: 12px; margin-top: 10px;"><%= link %></p>
+        <a href="<%= link %>" target="_blank" class="reset-button">Reset Password</a>
       </div>
       
       <div class="security">
